2005-12-24  Brian Gough  <bjg@network-theory.co.uk>

	* cspline.c (cspline_init_periodic): fix invalid memory access of
	xa[3] for sys_size=2

2005-12-22  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (test_cspline2): added extra test of cspline
	(test_cspline3): added extra test of cspline

2004-11-28  Brian Gough  <bjg@network-theory.co.uk>

	* cspline.c (cspline_init): support case of degenerate x[i] values
	(cspline_init_periodic): support case of degenerate x[i] values

	* integ_eval.h (integ_eval): improve numerical stability of
	integration formula

2004-03-15  Brian Gough  <bjg@network-theory.co.uk>

	* cspline.c (cspline_init): handle the case N=1 specially

2003-07-24  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_interp.h: removed duplicate declaration of
	gsl_interp_accel_find

Sat Apr 27 20:57:22 2002  Brian Gough  <bjg@network-theory.co.uk>

	* cspline.c (cspline_init_periodic): handle boundary effects
	correctly

Sun Dec  2 22:48:23 2001  Brian Gough  <bjg@network-theory.co.uk>

	* poly.c: added polynomial interpolation based on divided
 	differences from Dan, Ho-Jin.

Tue Jul  3 12:10:53 2001  Brian Gough  <bjg@network-theory.co.uk>

	* interp.c (DISCARD_STATUS): discard error status values using a
 	macro for configurability

Sun Jul  1 21:41:27 2001  Brian Gough  <bjg@network-theory.co.uk>

	* cspline.c: added const to state in appropriate places

Tue Jun 26 11:57:55 2001  Brian Gough  <bjg@network-theory.co.uk>

	* spline.c: added missing #include <string.h> for memcpy

Mon Jun 25 19:58:45 2001  Brian Gough  <bjg@network-theory.co.uk>

	* standardized to gsl conventions, added high-level 'spline'
 	interface

Mon Apr 30 13:29:34 2001  Brian Gough  <bjg@network-theory.co.uk>

	* renamed gsl_interp_obj to gsl_interp

Mon Apr 23 10:29:51 2001  Brian Gough  <bjg@network-theory.co.uk>

	* unified error handling conventions to _e for error handling
 	functions and no suffix for plain functions, so _impl functions
 	are no longer needed.
